<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#F3B59B"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.booklistingxq.MainActivity"
    android:orientation="vertical">
<LinearLayout
    android:layout_marginTop="@dimen/huge_margin_40dp"
    android:layout_marginBottom="@dimen/huge_margin_40dp"
    android:background="#F3E59A"
    android:id="@+id/search_query_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
android:paddingLeft="5dp"    >
    <LinearLayout

        android:id="@+id/search_query_part_that_can_be_hidden"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_search"/>
    <EditText
        android:layout_marginTop="5dp"
        android:id="@+id/search_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_search_hint"
        android:layout_weight="8"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_search"/>
        <EditText
            android:layout_marginTop="5dp"
            android:id="@+id/search_box_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/author_search_hint"
            android:layout_weight="8"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/expand_search_view"
            android:text="@string/expand_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_gravity="center_horizontal"
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_button"
          android:layout_marginLeft="20dp"
            />
    </LinearLayout>



</LinearLayout>

    <RelativeLayout
        android:background="#F3B59B"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <ListView

        android:id="@+id/search_results"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:dividerHeight = "25dp"
        >

    </ListView>
    <TextView
        android:id="@+id/empty_state_text"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_search_result_found"
        android:layout_gravity="center"
        android:gravity="center"/>

    <ProgressBar
        android:layout_centerInParent="true"
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
    </RelativeLayout>
</LinearLayout>
