<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:background="#9BBFAB"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginLeft="@dimen/margin_10dp"
            android:id="@+id/details_thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:textColor="#8C4646"
                android:id="@+id/details_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="@dimen/dimen_20"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/details_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/details_title"
                android:text="@string/authors"
                android:textSize="@dimen/dimen_15" />


            <Button
                android:id="@+id/link_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/details_author"
                android:layout_gravity="end"
                android:text="@string/more_details"
                />

        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:paddingLeft="5dp"
        android:id="@+id/details_description"
        android:layout_marginTop="@dimen/huge_margin_40dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text= "@string/place_holder_text"/>


</LinearLayout>

</ScrollView>