<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="#0092C7"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/book_image"
            android:layout_width="@dimen/image_thumbnail_width_height"
            android:layout_height="@dimen/image_thumbnail_width_height" />
        <!-- style="@style/rating" -->
        <RatingBar
            android:layout_below="@id/book_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="4"
            android:stepSize="1.0"
            style="?android:attr/ratingBarStyleSmall"

            />
    </RelativeLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/title"
            android:textColor="#faf7f7"
            android:textSize="@dimen/dimen_25"
            android:textStyle="bold" />

        <TextView
            android:textColor="#faf7f7"
            android:id="@+id/authors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authors"
            android:textSize="@dimen/dimen_18" />

        <TextView
            android:textColor="#faf7f7"
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:maxLines="2"
            android:ellipsize="end"
            android:textSize="@dimen/dimen_15"/>


    </LinearLayout>

    <TextView
        android:background="#F3E59A"
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="@dimen/dimen_15"
        android:singleLine="true"
        android:ellipsize="end"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/tiny_2dp"
        />
</LinearLayout>